RestartAus() now holds auAddDelLock, prevents interleaving of other AU config changes.
git-svn-id: svn://svn.code.sf.net/p/lockss/svn/lockss-daemon/trunk@17372 4f837ed2-42f5-46e7-a7a5-fa17313484d4